--- a/Questionbox/app/views/questions/new.html.erb
+++ b/Questionbox/app/views/questions/new.html.erb
@@ -1,5 +1,33 @@
 <h1 class = "heading">New Question</h1>
  
-<%= render 'form' %>
+#<%= render 'form' %>
+
+<%= form_with model: @question, local: true do |form| %>
+  <%= form.hidden_field :user_id, value: current_user.id %>
+  <% if @question.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@question.errors.count, "error") %> prohibited
+        this question from being saved:
+      </h2>
+      <ul>
+        <% @question.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+  <% end %>
+ 
+  <p>
+    <%= form.label :question %><br>
+    <%= form.text_area :body %>
+  </p>
+ 
+  <p>
+    <%= form.submit %>
+  </p>
+ 
+  <%= link_to "Show My Questions", user_path(session[:user_id]), class: "button" %>   
+
+<% end %>
 
 <%= link_to 'Back', questions_path, class: "button" %>
