--- a/Questionbox/app/views/questions/new.html.erb
+++ b/Questionbox/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class = "heading">New Question</h1>
  
-#<%= render 'form' %>
+<%= render 'form' %>
 
 <%= form_with model: @question, local: true do |form| %>
   <%= form.hidden_field :user_id, value: current_user.id %>
@@ -15,18 +15,7 @@
           <li><%= msg %></li>
         <% end %>
       </ul>
-  <% end %>
- 
-  <p>
-    <%= form.label :question %><br>
-    <%= form.text_area :body %>
-  </p>
- 
-  <p>
-    <%= form.submit %>
-  </p>
- 
-  <%= link_to "Show My Questions", user_path(session[:user_id]), class: "button" %>   
+  <% end %> 
 
 <% end %>
 
